package com.example.jee.examen.enums;

public enum Category {
    ONE, TWO, THREE, FOUR, FIVE, SIX,
    BRELAN, CARRE, FULL, PETITE_SUITE, GRANDE_SUITE, YAM, CHANCE
}
